# toolboks

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
toolboks/: __init__.py  _version.py  config.py  listlib.py  modifiers.py  system.py  xdg.py
toolboks/tests/: __init__.py  test_config.py  test_listlib.py  test_modifiers.py  test_system.py  test_xdg.py
toolboks/tests/testdata/: testconfig.ini
